Bug 1411142 Cast enums to int to silence warning about comparing enums of different types r=jld

MozReview-Commit-ID: LIbuzPuZ2mr